[package]
name = "omnishell"
version = "0.1.0"
edition = "2021"
authors = ["OmniShell Contributors"]
description = "Advanced terminal-based, peer-to-peer encrypted messaging CLI with military-grade security"
license = "MIT"
repository = "https://github.com/SagheerAkram/omnishell"
keywords = ["encryption", "messaging", "p2p", "security", "cli"]
categories = ["command-line-utilities", "cryptography", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"
prettytable-rs = "0.10"
dialoguer = "0.11"
tar = "0.4"
flate2 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
blake2 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
zeroize = { version = "1.7", features = ["derive"] }
sha2 = "0.10"
hkdf = "0.12"
hostname = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }

# Networking
quinn = "0.10"  # QUIC protocol
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
btleplug = "0.11"
futures = "0.3"
tokio-stream = "0.1"

# QR Code
qrcode = "0.13"
image = "0.24"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.21"
dirs = "5.0"
md5 = "0.7"
sharks = "0.5"
cpal = "0.15"
pnet = "0.34"

# Tor integration removed due to dependency conflicts
# arti-client = { version = "0.11", optional = true }
# tor-rtcompat = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = []
# tor = ["arti-client", "tor-rtcompat"]
# full = ["tor"]

[[bin]]
name = "omnishell"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
